<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.actualizar.ActualizarFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreBuscarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreBuscarEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/modificarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/buscar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telefonoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telefonoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valordeuda" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>