<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.buscar.buscarFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreBuscarTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreBuscarEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/digiteNombre" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buscarButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/buscar"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telefonoTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/telefono"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ValorDeudaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valordeuda"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>